--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
     <audio id="clickSound" src="click.mp3"></audio>
 
     <script src="script.js"></script>
+
+<footer>
+  <p style="font-size: 10px; color: #888;">Build: 1.0.0</p>
+</footer>
+
 </body>
 </html>
