--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
             </table>
         </div>
 
-        <!-- BPM Slider with Titration Controls -->
-        <div class="bpm-slider">
-            <label for="bpm">Adjust gtts/min:</label> <!-- Changed label -->
+        <!-- Gtts Slider with Titration Controls -->
+        <div class="gtts-slider">
+            <label for="gttsSlider">Adjust gtts/min:</label>
             <div class="slider-container">
-                <button id="decreaseGtts" class="slider-btn">-</button> <!-- Updated IDs -->
-                <input type="range" id="gttsSlider" min="30" max="200" value="60"> <!-- Updated ID -->
-                <button id="increaseGtts" class="slider-btn">+</button> <!-- Updated IDs -->
+                <button id="decreaseGtts" class="slider-btn">-</button>
+                <input type="range" id="gttsSlider" min="30" max="200" value="60">
+                <button id="increaseGtts" class="slider-btn">+</button>
             </div>
-            <span id="gttsValue">60</span> gtts/min <!-- Updated display -->
+            <span id="gttsValue">60</span> gtts/min
         </div>
-
 
         <!-- Start/Stop Button -->
         <button id="startStopBtn">Start / Stop</button>
 
         <!-- Visual Indicator as IV Chamber -->
         <div class="visual-indicator" id="visualIndicator">
-            <div class="drop" id="drop"></div> <!-- Drop element inside the chamber -->
+            <div class="liquid"></div> <!-- Liquid at the bottom -->
         </div>
+        
 
         <!-- Build Version -->
         <p>Build 1.3.8</p>
