Fixing the drug details

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
         <h1>FlowSyncEMS Drip Metronome</h1>
+        <p class="tagline">Synchronizing Care, Saving Lives</p>
+
 
         <!-- Dropdown Menu for Drip Presets -->
         <div class="dropdown">
@@ -25,6 +27,7 @@
         <!-- Drip Details Section -->
         <div class="drip-details">
             <h2>Drip Details</h2>
+            <p id="indication">Indication: --</p>
             <p id="concentration">Concentration: --</p>
             <p id="mixingInstructions">Mixing Instructions: --</p>
             <p id="rate">Rate: --</p>
