--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="site-header">
+        <img src="logo.png" alt="FlowSyncEMS Logo" class="logo">
+        <div class="title-container">
+            <h1>FlowSyncEMS Drip Metronome</h1>
+            <p class="tagline">Synchronizing Care, Saving Lives</p>
+        </div>
+    </header>
     <div class="container">
-        <h1>FlowSyncEMS Drip Metronome</h1>
-        <p class="tagline">Synchronizing Care, Saving Lives</p>
-
 
         <!-- Dropdown Menu for Drip Presets -->
         <div class="dropdown">
